<resources>
    <string name="app_name">CourseLearn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details_below_free_sign_up"><![CDATA[Enter your details below & free sign up]]></string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="enter_your_details_to_login">Enter your details to login</string>
    <string name="terms"><![CDATA[By creating an account you have to agree with our \nterms & conditions.]]></string>
    <string name="already_have_an_account_login">Already have an account？ Login</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_your_own_n_study_plan">Create your own \n study plan</string>
    <string name="continue_with_phone">Continue with Phone</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="code_is_sent_to">Enter Code is sent to</string>
    <string name="congratulations_you_have_n_completed_your_registration">Congratulations, you have \n completed your registration!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email_to_receive_password_reset_link">Enter your email to receive password reset link</string>
    <string name="password_reset">Password reset</string>
    <string name="search">Search</string>
    <string name="course">Courses</string>
    <string name="message">Message</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="favorite">Favorite</string>
    <string name="edt_acc">Edit Account</string>
    <string name="settings">Settings and Privacy</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="start_learning">Let\'s start learning</string>
    <string name="find_course">Find course</string>
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="details">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,</string>
    <string name="verification_message">A verification email has been sent to your email address. Please check your inbox and click on the link to verify your account.</string>
    <string name="about_this_course">About this course</string>
    <string name="product_design">Product Design</string>
    <string name="lesson_plan">Lesson Plan</string>
    <string name="search_course">Search course</string>
    <string name="bestseller">BESTSELLER</string>
    <string name="lesson">lesson</string>
</resources>