<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/titleBackground"
    tools:context=".ui.authentication.LoginFragment">

    <LinearLayout
        android:id="@+id/titleL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/titleBackground"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="start|bottom"
            android:text="@string/login"
            android:textColor="@color/subHeadTxtColor"
            android:textSize="@dimen/_30ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|bottom"
            android:text="@string/enter_your_details_to_login"
            android:textColor="@color/subHead2TxtColor"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_520sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/titleL">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bodyBackground">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailL"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/your_email"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="28dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordL"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@id/emailL"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <include
                android:id="@+id/loginBtn"
                layout="@layout/app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@id/passwordL" />

            <TextView
                android:id="@+id/signUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/loginBtn"
                app:layout_constraintStart_toStartOf="@+id/loginBtn"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/forget_password"
                app:layout_constraintBottom_toTopOf="@+id/loginBtn"
                app:layout_constraintEnd_toEndOf="@+id/passwordL"
                app:layout_constraintTop_toBottomOf="@+id/passwordL" />

            <include
                android:id="@+id/loader"
                layout="@layout/progress_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>