<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courses.CourseDetailsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/courseImg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_gravity="top">
            <TextView
                android:id="@+id/bestSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bestseller_tag"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="BESTSELLER"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/courseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="Product Design"
                android:textColor="@color/normalTextColor"
                android:textSize="@dimen/_20ssp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="@+id/bestSeller"
                app:layout_constraintTop_toBottomOf="@+id/bestSeller" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_450sdp"
            android:layout_gravity="bottom"
            app:cardCornerRadius="@dimen/_20sdp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/titleBackground">
                <TextView
                    android:id="@+id/courseName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/product_design"
                    android:textColor="@color/normalTextColor"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/coursePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="$120"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_18ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/courseName2" />
                <TextView
                    android:id="@+id/minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="min"
                    app:layout_constraintStart_toStartOf="@+id/courseName2"
                    app:layout_constraintTop_toBottomOf="@+id/courseName2" />

                <TextView
                    android:id="@+id/lesson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="lesson"
                    app:layout_constraintStart_toEndOf="@+id/minute"
                    app:layout_constraintTop_toTopOf="@+id/minute" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/about_this_course"
                    android:textColor="@color/normalTextColor"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/minute"
                    app:layout_constraintTop_toBottomOf="@+id/minute" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    tools:itemCount="2"
                    app:layout_constraintTop_toBottomOf="@+id/desc"
                    tools:listitem="@layout/course_content_list_item" />

                <include
                    android:id="@+id/buy"
                    layout="@layout/app_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>